--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "langchain": "^0.1.33",
+    "mysql2": "^3.9.7",
     "next": "14.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "string_decoder": "^1.3.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.3",
