--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@langchain/community": "^0.0.49",
     "@langchain/openai": "^0.0.28",
     "@next/bundle-analyzer": "^13.4.19",
+    "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -38,7 +40,8 @@
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
-    "prettier": "3.0.0"
+    "prettier": "3.0.0",
+    "prisma": "^5.13.0"
   },
   "resolutions": {
     "@langchain/core": "0.1.58"
